# game-of-20-questions

./: .env.example  .gitignore  Makefile  Notes.md  README.md  agent_client.py  game.py  game_on_shell.py  main.py  pyproject.toml  utils.py
evals/: test_game_with_different_agent_temperatures.py  test_game_with_different_prompts.py  test_game_with_different_topics.py
examples/: test_results_guessing_agent_additional_instructions_version_1.json
